@@ -16,6 +16,7 @@
 import sys
 import os
 import shlex
+import re
 
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
@@ -38,7 +39,7 @@ extensions = [
     'sphinx.ext.mathjax',
     'sphinx.ext.ifconfig',
     'sphinx.ext.viewcode',
-    'numpydoc',
+    "sphinx.ext.napoleon",
 ]
 
 # Add any paths that contain templates here, relative to this directory.
@@ -63,11 +64,20 @@ author = 'Nezar Abdennur'
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
-#
-# The short X.Y version.
-version = '1.0'
+def _get_version():
+    init = os.path.join("..", "pqdict", "__init__.py")
+    with open(init) as fh:
+        text = fh.read()
+    version = re.search(
+        r'^__version__\s*=\s*[\'"]([^\'"]*)[\'"]', text, re.MULTILINE
+    ).group(1)
+    return version
+
 # The full version, including alpha/beta/rc tags.
-release = '1.0.0'
+release = _get_version()
+
+# The short X.Y version.
+version = release.rsplit(".", maxsplit=1)[0]
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
