@@ -1,3 +1,3 @@
 Sphinx
 sphinx-rtd-theme
-numpydoc==0.5
+numpydoc
